# ProtoEngine

./: .gitignore  CMakeLists.txt  imgui.ini
shaders/: basic.frag  basic.vert  default.frag
src/: CMakeLists.txt  Shader.cpp  Shader.hpp  main.cpp
src/ProtoEngine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Component.hpp  Engine.cpp  Engine.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  MeshComponent.cpp  MeshComponent.hpp  MeshComponentFactory.cpp  MeshComponentFactory.hpp  Node.cpp  Node.hpp  NodeFactory.cpp  NodeFactory.hpp  ProtoEngine.hpp  ProtoTypes.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Target.cpp  Target.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Viewport.cpp  Viewport.hpp  Window.cpp  Window.hpp  engineTest.cpp
src/imgui/: CMakeLists.txt
